@@ -78,6 +78,7 @@ Eli Bendersky
 Andrew Bennetts
 Andy Bensky
 Michel Van den Bergh
+Julian Berman
 Eric Beser
 Steven Bethard
 Stephen Bevan
